<resources>
    <string name="app_name">AppInfo</string>
    <string name="search">Search</string>
    <string name="search_app">Search apps by name or package</string>
    <string name="apps">Apps</string>
    <string name="apks">Apks</string>
    <string name="all_apps">All Apps</string>
    <string name="sort_by">Sort By</string>
    <string name="app_icon">App Icon</string>
    <string name="dot_divider">•</string>
    <string name="loading_apps">Loading Apps</string>
    <string name="system">System</string>
    <string name="searching_for_apks">Searching for Apks</string>
    <string name="allow_access">Allow access</string>
    <string name="apk_icon">Apk Icon</string>
    <string name="no_results">No results</string>
    <string name="app_details">App details</string>
    <string name="no_apks_found">No apks found\n Try changing filter ?</string>
    <string name="no_apps_found">No apps found</string>
    <string name="share_playstore_link">Share playstore link</string>
    <string name="share">Share</string>
    <string name="share_apk">Share Apk</string>
    <string name="or">or</string>
    <string name="why">Why ?</string>
    <string name="scroll_to_top">Scroll to Top</string>
    <string name="settings">Settings</string>
    <string name="more_options">More options</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="icon_shape">Icon shape</string>
    <string name="squircle">Squircle</string>
    <string name="round">Round</string>
    <string name="scan">Scan</string>
    <string name="scan_hidden_folders">Scan hidden folders</string>
    <string name="show_split_apks">Show split apks in the results</string>
    <string name="scan_mode">Scan mode</string>
    <string name="search_type">Search type</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_these_apk_files">Delete these apk files ?</string>
    <string name="select_all">Select all</string>

</resources>