<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="32dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/delete_these_apk_files"
        app:layout_constraintHorizontal_bias="0.1"
        android:textAppearance="?textAppearanceTitleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="This is permanent and cannot be undone."
        android:textAppearance="?textAppearanceBodySmall"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Button
        android:id="@+id/btnDelete"
        style="?materialIconButtonFilledTonalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:paddingHorizontal="24dp"
        android:text="@string/delete"
        android:paddingVertical="12dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:backgroundTint="?colorErrorContainer"
        app:icon="@drawable/outline_delete_forever_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btnCancel"
        app:iconPadding="8dp"
        app:iconTint="?colorError"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

    <Button
        android:id="@+id/btnCancel"
        style="?materialIconButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:text="@string/cancel"
        app:icon="@drawable/round_close"
        app:iconPadding="8dp"
        app:iconTint="?colorPrimary"
        app:layout_constraintRight_toLeftOf="@id/btnDelete"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>