<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="?android:colorBackground"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorBackground"
        app:liftOnScroll="false"
        android:layout_gravity="top"
        android:animateLayoutChanges="true"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolBar"
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            app:contentScrim="@android:color/transparent"
            app:titleCollapseMode="scale"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            app:expandedTitleTextAppearance="?attr/textAppearanceDisplayMedium"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/materialToolBar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:elevation="0dp"
                app:menu="@menu/app_bar"
                app:layout_collapseMode="pin"
                app:title="@string/app_name" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <LinearLayout
            android:id="@+id/operationButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFilter"
                style="@style/Widget.Material3Expressive.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/all_apps"
                app:icon="@drawable/filter_list" />

            <Button
                android:id="@+id/btnSort"
                style="@style/Widget.Material3Expressive.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:gravity="end|center_vertical"
                android:text="@string/sort_by"
                app:icon="@drawable/sort"
                app:iconGravity="end" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/SearchBar"
            android:id="@+id/search_bar"
            android:visibility="gone"
            android:maxWidth="720dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="visible"
            android:layout_margin="16dp"
            app:boxBackgroundColor="?colorSecondaryContainer"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/round_search_24"
            android:hint="@string/search_app">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionSearch"
                />

        </com.google.android.material.textfield.TextInputLayout>


    </com.google.android.material.appbar.AppBarLayout>


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:itemIconSize="22dp"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>