<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="24dp">

    <TextView
        android:id="@+id/tvDividerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:fontFamily="@font/lexend_deca"
        android:textAppearance="?textAppearanceLabelLarge"
        app:layout_constraintBottom_toBottomOf="@+id/btnShareLink"
        app:layout_constraintEnd_toStartOf="@+id/btnShareApk"
        app:layout_constraintStart_toEndOf="@+id/btnShareLink"
        app:layout_constraintTop_toTopOf="@+id/btnShareLink" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDividerText"
        app:layout_constraintEnd_toStartOf="@+id/tvDividerText"
        app:layout_constraintStart_toEndOf="@+id/btnShareLink"
        app:layout_constraintTop_toTopOf="@+id/tvDividerText"
        app:layout_constraintVertical_bias="0.6" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintBottom_toBottomOf="@+id/tvDividerText"
        app:layout_constraintStart_toEndOf="@+id/tvDividerText"
        app:layout_constraintEnd_toStartOf="@+id/btnShareApk"
        app:layout_constraintTop_toTopOf="@+id/tvDividerText" />

    <Button
        android:id="@+id/btnShareLink"
        style="?materialIconButtonFilledTonalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:contentDescription="@string/share_playstore_link"
        app:iconSize="32dp"
        app:icon="@drawable/round_link_24"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvShareLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constrainedWidth="true"
        android:layout_marginHorizontal="12dp"
        android:fontFamily="@font/lexend_deca"
        android:gravity="center"
        android:text="@string/share_playstore_link"
        android:textAppearance="?textAppearanceLabelLarge"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShareLink" />

    <Button
        android:id="@+id/btnShareApk"
        style="?materialIconButtonFilledTonalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="28dp"
        android:contentDescription="@string/share_apk"
        app:iconSize="26dp"
        app:icon="@drawable/apk_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvShareApk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="12dp"
        app:layout_constrainedWidth="true"
        android:fontFamily="@font/lexend_deca"
        android:gravity="center"
        android:text="@string/share_apk"
        android:textAppearance="?textAppearanceLabelLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/btnShareApk" />

    <Button
        android:id="@+id/btnWhy"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/why"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvShareApk" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>