<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.ApkFragment">


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="80dp"
            android:paddingTop="16dp"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <TextView
        android:id="@+id/tvStoragePermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="App needs Manage all files permission \n to search for all apks"
        android:gravity="center"
        android:drawablePadding="8dp"
        android:textAppearance="?textAppearanceTitleMedium"
        app:layout_constraintVertical_bias="0.28"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableTopCompat="@drawable/twotone_folder_off_24" />

    <Button
        android:id="@+id/btnStorageAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_marginTop="12dp"
        android:text="@string/allow_access"
        app:layout_constraintEnd_toEndOf="@+id/tvStoragePermission"
        app:layout_constraintStart_toStartOf="@+id/tvStoragePermission"
        app:layout_constraintTop_toBottomOf="@+id/tvStoragePermission" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupStoragePermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tvStoragePermission,btnStorageAccess"/>

    <TextView
        android:id="@+id/tvProgressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searching_for_apks"
        app:drawableTint="?attr/colorPrimary"
        app:layout_constraintVertical_bias="0.28"
        android:textAppearance="?textAppearanceLabelLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawablePadding="8dp"
        app:drawableTopCompat="@drawable/ic_android_black_56dp" />


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorSize="200dp"
        android:indeterminate="true"
        app:layout_constraintVertical_bias="0.26"
        app:trackCornerRadius="12dp"
        app:trackThickness="12dp"
        app:wavelength="40dp"
        app:hideAnimationBehavior="outward"
        app:indeterminateAnimatorDurationScale="2"
        app:waveAmplitude="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/progressGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:constraint_referenced_ids="tvProgressText,progressBar"/>

    <TextView
        android:id="@+id/notFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_apks_found"
        android:fontFamily="@font/poppins_semibold"
        android:drawablePadding="8dp"
        android:visibility="gone"
        android:gravity="center"
        android:textAppearance="?textAppearanceLabelLarge"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableTopCompat="@drawable/illustration_not_found" />

</androidx.constraintlayout.widget.ConstraintLayout>