<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AppFragment">


    <Button
        android:id="@+id/btnFilter"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constrainedWidth="true"
        android:gravity="start|center_vertical"
        android:text="@string/all_apps"
        app:layout_constraintHorizontal_bias="0"
        app:icon="@drawable/filter_list"
        app:layout_constraintEnd_toStartOf="@+id/midline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSort"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        android:layout_marginEnd="4dp"
        android:gravity="end|center_vertical"
        app:layout_constraintHorizontal_bias="1"
        android:text="@string/sort_by"
        app:icon="@drawable/sort"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/midline"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFilter">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="128dp"
            android:paddingTop="16dp" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imgProgressIcon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintVertical_bias="0.3"
        android:src="@drawable/round_widgets_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvProgressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_apps"
        android:layout_marginTop="4dp"
        android:textAppearance="?textAppearanceLabelLarge"
        app:layout_constraintEnd_toEndOf="@+id/imgProgressIcon"
        app:layout_constraintStart_toStartOf="@+id/imgProgressIcon"
        app:layout_constraintTop_toBottomOf="@+id/imgProgressIcon" />


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginTop="8dp"
        app:trackCornerRadius="6dp"
        app:trackThickness="6dp"
        app:layout_constraintEnd_toEndOf="@+id/tvProgressText"
        app:layout_constraintStart_toStartOf="@+id/tvProgressText"
        app:layout_constraintTop_toBottomOf="@+id/tvProgressText"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/progressGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="imgProgressIcon,tvProgressText,progressBar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabScrollBack"
        style="?attr/floatingActionButtonSmallStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/double_arrow_up" />

</androidx.constraintlayout.widget.ConstraintLayout>